--- a/DKashenko/index.html
+++ b/DKashenko/index.html
@@ -17,7 +17,7 @@
              </div>
         </div>
    
-        <div class="reklama">
+        <div class="message">
              <h2>Добрый день!<br>
              Вы попали на мой сайт,он называется IT Club<br>
              Я только начинаю делать первые шаги в веб-программировании<br>
