--- a/IKashenko/index.html
+++ b/IKashenko/index.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
             
-            <div class="reklama">
+            <div class="message">
                 <h2>Добрый день!<br> Вы попали на мой сийт ,он называется IT Club<br> Я только начинаю делать первые шаги в веб программировании</h2>
                 <a href="#" class="reg">Зарегистрироваться</a>
             </div>
