--- a/Lashenko/index.html
+++ b/Lashenko/index.html
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        <div class="reclama">
+        <div class="message">
            <h2> вас приветствует попка корп и зарегстрируйтесь пожалуйста </h2>
        <a href="#" class="reg"> registr </a>
         </div>
