--- a/Turenko/index.html
+++ b/Turenko/index.html
@@ -19,7 +19,7 @@
 
     </div> 
 
-<div class="reklama"> 
+<div class="message"> 
       <h2> добрый день<br>
       Вы попали на мой сайт, он называется IT Club<br>
       Я только начинаю делать первые шаги в веб-программировании<br>
