--- a/Turenko/site3/index.html
+++ b/Turenko/site3/index.html
@@ -52,7 +52,7 @@
         <div class="card">
   
           <div class="box-img">
-              <img src="image/kamas1.jpg" class="card-img-top ">
+              <img src="image/Kamas1.jpg" class="card-img-top ">
           </div>
   
           <div class="card-body">
@@ -71,7 +71,7 @@
       <div class="card">
   
           <div class="box-img">
-              <img src="image/kamas2.jpg" class="card-img-top ">
+              <img src="image/Kamas2.jpg" class="card-img-top ">
           </div>
   
         <div class="card-body">
@@ -90,7 +90,7 @@
       <div class="card">
   
         <div class="box-img">
-              <img src="image/kamas3.jpg" class="card-img-top ">
+              <img src="image/Kamas3.jpg" class="card-img-top ">
           </div>
   
         <div class="card-body">
@@ -109,7 +109,7 @@
       <div class="card">
   
         <div class="box-img">
-              <img src="image/kamas4.jpg" class="card-img-top ">
+              <img src="image/Kamas4.jpg" class="card-img-top ">
           </div>
   
         <div class="card-body">
@@ -129,7 +129,7 @@
     <div class="col-3">
         <div class="card">
           <div class="box-img">
-              <img src="image/kamas5.jpg" class="card-img-top ">
+              <img src="image/Kamas5.jpg" class="card-img-top ">
           </div>
           <div class="card-body">
                <h5>камаз№5-54774</h5>
@@ -146,7 +146,7 @@
     <div class="col-3">
       <div class="card">
          <div class="box-img">
-              <img src="image/kamas6.jpg" class="card-img-top ">
+              <img src="image/Kamas6.jpg" class="card-img-top ">
           </div>
         <div class="card-body">
              <h5>камаз№6-12485</h5>
@@ -163,7 +163,7 @@
   <div class="col-3">
       <div class="card">
          <div class="box-img">
-              <img src="image/kamas7.jpg" class="card-img-top ">
+              <img src="image/Kamas7.jpg" class="card-img-top ">
           </div>
         <div class="card-body">
              <h5>камаз№7-48726</h5>
@@ -180,7 +180,7 @@
   <div class="col-3">
       <div class="card">
        <div class="box-img">
-              <img src="image/kamas8.jpg" class="card-img-top ">
+              <img src="image/Kamas8.jpg" class="card-img-top ">
           </div>
         <div class="card-body">
              <h5>камаз№8-56704</h5>
