--- a/pugachov.html
+++ b/pugachov.html
@@ -6,6 +6,6 @@
 	<title>-^-</title>
 </head>
 <body>
-<a href="pugachov.zip" download style="font-size:24pt;">тык</a>
+<a href="Pugachov.zip" download style="font-size:24pt;">тык</a>
 </body>
 </html>
