--- a/LBelozerov.html
+++ b/LBelozerov.html
@@ -34,9 +34,7 @@
     </head>
     <body bgcolor="thistle">
         <div>
-            <a href="group1.html">1 Группа</a>
-            <a href="group2.html">2 Группа</a>
-            <a href="group3.html">3 Группа</a>
+        <a href="LBelozerov/web-site1/index.html">1 сайт</a>
         </div>
     </body>
 </html>
