--- a/group3.html
+++ b/group3.html
@@ -34,9 +34,8 @@
     </head>
     <body bgcolor="thistle">
         <div>
-            <a href="group1.html">1 Группа</a>
-            <a href="group2.html">2 Группа</a>
-            <a href="group3.html">3 Группа</a>
+        <a href="LBelozerov.html">Белозёров Леонид</a>
+        
         </div>
     </body>
 </html>
