--- a/Malika.html
+++ b/Malika.html
@@ -34,6 +34,7 @@
     </head>
     <body bgcolor="thistle">
         <div>
+        <h2>Малика Абдуллаева</h2>
         <a href="Malika/web-site01/index.html">1 сайт</a>
         </div>
     </body>
