--- a/Malika.html
+++ b/Malika.html
@@ -34,7 +34,7 @@
     </head>
     <body bgcolor="thistle">
         <div>
-        <h2>Малика Абдуллаева</h2>
+        <a><h2>Малика Абдуллаева</h2></a>
         <a href="Malika/web-site01/index.html">1 сайт</a>
         </div>
     </body>
