--- a/Malika.html
+++ b/Malika.html
@@ -36,6 +36,7 @@
         <div>
         <a><h2>Малика Абдуллаева</h2></a>
         <a href="Malika/web-site01/index.html">1 сайт</a>
+        <a href="Malika/web-site02/index.html">2 сайт</a>
         </div>
     </body>
 </html>
