malika add 3 web-site

--- a/Malika.html
+++ b/Malika.html
@@ -37,6 +37,7 @@
         <a><h2>Малика Абдуллаева</h2></a>
         <a href="Malika/web-site01/index.html">1 сайт</a>
         <a href="Malika/web-site02/index.html">2 сайт</a>
+        <a href="Malika/web-site03/index.html">3 сайт</a>
         </div>
     </body>
 </html>
