add site #4 Malikino

--- a/Malika.html
+++ b/Malika.html
@@ -38,6 +38,7 @@
         <a href="Malika/web-site01/index.html">1 сайт</a>
         <a href="Malika/web-site02/index.html">2 сайт</a>
         <a href="Malika/web-site03/index.html">3 сайт</a>
+        <a href="Malika/web-site04/index.html">4 сайт</a>
         </div>
     </body>
 </html>
