--- a/Deny.html
+++ b/Deny.html
@@ -34,8 +34,8 @@
     </head>
     <body bgcolor="thistle">
         <div>
-        <a><h2>Mr. Denny</h2></a>
-        <a href="Denny/site01/index.html">1 сайт</a>
+        <a><h2>Mr. Deny</h2></a>
+        <a href="Deny/site01/index.html">1 сайт</a>
         </div>
     </body>
 </html>
