add Deny 2 web site

--- a/Deny.html
+++ b/Deny.html
@@ -35,7 +35,8 @@
     <body bgcolor="thistle">
         <div>
         <a><h2>Mr. Deny</h2></a>
-        <a href="Deny/site01/index.html">1 сайт</a>
+        <a href="Deny/site01/index.html">1 сайт</a><br>
+        <a href="Deny/site02/index.html">2 сайт</a><br>
         </div>
     </body>
 </html>
